[tool.poetry]
name = "btf_extractor"
version = "0.1.0"
description = "Extract various BTF archive format."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
license = "zlib license"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.3"
Pillow = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ptpython = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
