[tool.poetry]
name = "btf_extractor"
version = "1.2.0"
description = "Extract UBO BTF archive format(UBO2003, UBO2014)."
authors = ["2-propanol <nuclear.fusion.247@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/2-propanol/btf_extractor"
license = "zlib license"
packages = [
    { include = "btf_extractor"},
]
# exclude = [
#     {path = "btf_extractor/c_ext"},
# ]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19"
Pillow = ">=7"
nptyping = "^1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
ptpython = ">=3"

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
